Split item into components for display

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,10 @@
         <li>Items</li>
         <ul>
             {{#each gift.items as |item|}}
-            <li>{{item}}</li>
+            <li>{{item.id}}</li>
+            <li>{{item.name}}</li>
+            <li>{{item.cost}}</li>
+            <li>{{item.gift}}</li>
             {{/each}}
         </ul>
     </ul>
